# esp32c3-esp-idf-demo-ng

./: .gitignore  Cargo.toml  README.md  build.env.example  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
src/: app_tests.rs  crypto.rs  main.rs  net.rs  nostr.rs  preludes.rs
